[package]
name = "moka-cache"
version = "1.0.3"
edition = "2021" 
description = "Based on Moka K-V Cache Utils"
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/moka-cache.git"
license = "MIT"
 

[dependencies]
moka = { version = "0.12.11", features = ["sync"] }
anyhow = "1.0.100"
serde = { version = "1.0.228",features = ["derive"]}
log = "0.4.28"
bincode = "2.0.1" 
